--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE HTML>
-
 <html lang="en">
 
 <!--Project_SaudahJones-->
-
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Vicious Cycles is Durham's Most Inclusive Bike Shop. We provide bicycle fittings, sales, assembly, and repairs. We also sell bike acessories and apparal.">
-            <title> Vicious Cycles | We have your bike </title>
-        <link rel="stylesheet" type="text/css" href="myStyles.css" />
-        <style>
-           section article p img#pic1    {width: 120px; height: 150px; float: left; padding: 0; margin-right: 20px; margin-bottom: 20px; box-shadow: 5px 5px #888888;}
-        </style>
-    </head>
-
+<!--Charset meta tag must be within the first 1024 bytes of the HTML-->
+<!--Internal stylesheet is for the Vicious Cycles Header-->
+<head> 
+    <meta charset="utf-8">
+    <title> Vicious Cycles of Durham| We have your bike </title>
+    <meta name="description" content="Vicious Cycles is proud to be Durham's most inclusive bike store. Shop our collection of single speed and electric bikes now!">
+    <style type="text/css"> 
+    body {background-color: #E7FBFB;} 
+    h1 {font-size: 4em; text-align: center; color: #010B5B }
+    </style>
+</head>
 <body>
-    <header><h1>Welcome to Vicious Cycles of Durham!</h1></header>
-
-<!--COMING SOON!-->
+    <header>
+    <!--Introductory content (such as a group of introductory or navigation aids) goes within the headER. Elements such as a logo and search form goes here :)-->   
+        <h1>Welcome to Vicious Cycles of Durham!</h1>
+    </header>
 </body> 
-
 </html>
