--- a/index.html
+++ b/index.html
@@ -1,22 +1,50 @@
 <!DOCTYPE HTML>
 <html lang="en">
-
 <!--Project_SaudahJones-->
-<!--Charset meta tag must be within the first 1024 bytes of the HTML-->
-<!--Internal stylesheet is for the Vicious Cycles Header-->
-<head> 
+<!--Now removing internal CSS; This project will use only external css-->
+<head>
     <meta charset="utf-8">
-    <title> Vicious Cycles of Durham| We have your bike </title>
+    <title> Vicious Cycles of Durham | We have your bike </title>
     <meta name="description" content="Vicious Cycles is proud to be Durham's most inclusive bike store. Shop our collection of single speed and electric bikes now!">
-    <style type="text/css"> 
-    body {background-color: #E7FBFB;} 
-    h1 {font-size: 4em; text-align: center; color: #010B5B }
-    </style>
-</head>
+        <link rel="stylesheet" type="text/css" href="myStyles_viciouscycles.css" />
+    </head>
+
 <body>
     <header>
-    <!--Introductory content (such as a group of introductory or navigation aids) goes within the headER. Elements such as a logo and search form goes here :)-->   
-        <h1>Welcome to Vicious Cycles of Durham!</h1>
+    <img src="images/vicious-cycles-logo.png" alt="Vicious Cycles Logo" id='pic1'>
+    <h1>Welcome to Vicious Cycles of Durham!</h1>
     </header>
+    <!--https://www.pexels.com/photo/man-in-yellow-jacket-riding-on-a-yellow-bicycle-5612320/-->
+    <img src="images/pexels-thirdman-5612320.jpg" alt="African American Male in Yellow Coat is Sitting on a Yellow Bike while Talking on a Yellow Cell Phone" id='pic2'>
+
+    <p>Goal: the client wants to increase customer bike competency
+        Objectives:
+        •	Increase customer bike matching satisfaction by 20% within a 3-month period.
+        •	Decrease email response time by 50% by September 2021.
+        •	Create bike fitting guide that accounts the top 5 bicycles sold within the past financial year (2020).
+    </p>
+
+    <p><a target="_blank" href="https://www.reddit.com/r/bicycling/">Bicycling Subreddit</a></p>
+
+    <a href="#">Shop Now</a>
+    <a href="#">Helpful Information</a>
+    <a href="#">Services</a>
+    <a href="#">About Us</a>
+    <a href="#">My Account</a>
+
+    <footer>
+        <a target="_blank" href="https://www.facebook.com/login.php">Facebook</a> | <a target="_blank" href="https://twitter.com/login/">Twitter</a> | 123 Commercial Drive | Durham, NC | (919) 123-4567
+
+        <a href="https://www.facebook.com/login.php">
+            <img src="images/f_logo_RGB-Blue_58.png" alt="Facebook logo">
+          </a>
+
+          <a href="https://twitter.com/login/">
+            <img src="images/2021 Twitter logo - blue.png" alt="Twitter logo">
+          </a>
+
+     </footer>
+
 </body> 
+
 </html>
